HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/GenericCallArgCount/Expected.uv
//! Expected diagnostic metadata for the GenericCallArgCount rejected-source specimen.

expectedDiagnostic("E-TYP-2303", "rule.14.Generic-Call-ArgCount-Err")
